# MathMaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/desktop/src/: main.cpp
docs/: architecture.md
libs/core/include/mathmaster/core/: Engine.hpp
libs/core/src/: Engine.cpp
libs/document/include/mathmaster/document/: Worksheet.hpp
libs/document/src/: Worksheet.cpp
libs/io/include/mathmaster/io/: ProjectSerializer.hpp
libs/io/src/: ProjectSerializer.cpp
libs/math/include/mathmaster/math/: Expression.hpp
libs/math/src/: Expression.cpp
libs/units/include/mathmaster/units/: UnitSystem.hpp
libs/units/src/: UnitSystem.cpp
tests/: CMakeLists.txt
tests/smoke/: EngineSmoke.cpp
